changes to runBenchmark